--- a/.travis.yml
+++ b/.travis.yml
@@ -40,6 +40,7 @@ jobs:
         - wget https://dl.google.com/android/repository/sdk-tools-linux-4333796.zip
         - unzip sdk-tools-linux-4333796.zip
         - touch ~/.android/repositories.cfg
+        - sudo update-alternatives --config java
         - yes | ./tools/bin/sdkmanager --update
         - yes | ./tools/bin/sdkmanager "platforms;android-28"
         - yes | ./tools/bin/sdkmanager "build-tools;28.0.3"
