--- a/.travis.yml
+++ b/.travis.yml
@@ -41,6 +41,7 @@ jobs:
         - unzip sdk-tools-linux-4333796.zip
         - touch ~/.android/repositories.cfg
         - sudo update-alternatives --config java
+        - yes | ./tools/bin/sdkmanager --licenses  
         - yes | ./tools/bin/sdkmanager --update
         - yes | ./tools/bin/sdkmanager "platforms;android-28"
         - yes | ./tools/bin/sdkmanager "build-tools;28.0.3"
