--- a/.travis.yml
+++ b/.travis.yml
@@ -25,9 +25,15 @@ before_script:
       - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
       - chmod +x ./cc-test-reporter
       - ./cc-test-reporter before-build
+      
+before_install:
+  - node --version
+  - npm --version
+  - gradle --version
 install:
   - npm install
   - npm install -g ionic cordova
+
 jobs:
   include:
     - stage: "Tests"
