--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,8 @@
+language: node_js
+node_js: "12.14.0"
 env:
   global:
     - CC_TEST_REPORTER_ID=9e94eb42394f339fee6592314b209bd1afb92b11580fee8e550111aa42626990
-    - ANDROID_API_LEVEL=28
-    - ANDROID_BUILD_TOOLS_VERSION=28.0.3
-    - ANDROID_ABI=armeabi-v7a
 
 branches:
       only:
