--- a/.travis.yml
+++ b/.travis.yml
@@ -1,26 +1,28 @@
 matrix:
     # app for browser (just for testing)
     - language: node_js
-      node_js: "12.14.0"
-      install:
-        - npm install
-        - npm install -g ionic cordova
+      node_js: 
+        - 12.14.0
       services:
         - xvfb
       dist: xenial
       addons:
-      chrome: stable
+        chrome: stable
+      env:
+        global:
+            - CC_TEST_REPORTER_ID=9e94eb42394f339fee6592314b209bd1afb92b11580fee8e550111aa42626990
+      branches:
+        only:
+            - master   
+            
+      install:
+        - npm install
+        - npm install -g ionic cordova
+
       before_script:
         - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
         - chmod +x ./cc-test-reporter
-        - ./cc-test-reporter before-build
-      env:
-        global:
-          - CC_TEST_REPORTER_ID=9e94eb42394f339fee6592314b209bd1afb92b11580fee8e550111aa42626990
-
-      branches:
-            only:
-            - master      
+        - ./cc-test-reporter before-build   
 
       after_script:
         - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
