--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ matrix:
     - language: node_js
       node_js: 
         - 12.14.0
+      os: linux
       services:
         - xvfb
       dist: xenial
@@ -38,6 +39,7 @@ matrix:
     # app for android
     - language: android
       dist: trusty
+      os: linux
       sudo: true
       android:
         components:
