--- a/.travis.yml
+++ b/.travis.yml
@@ -1,47 +1,83 @@
 sudo: false
 
-language: node_js
-node_js: "12.14.0"
-
-env:
-  global:
-    - CC_TEST_REPORTER_ID=9e94eb42394f339fee6592314b209bd1afb92b11580fee8e550111aa42626990
-    - ANDROID_API_LEVEL=28
-    - ANDROID_BUILD_TOOLS_VERSION=28.0.3
-    - ANDROID_ABI=armeabi-v7a
-
-dist: xenial
-services:
-  - xvfb
-
-addons:
-  chrome: stable
-
-branches:
-      only:
-      - master
-
-before_script:
-      - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
-      - chmod +x ./cc-test-reporter
-      - ./cc-test-reporter before-build
-      
-before_install:
-  - node --version
-  - npm --version
-  - gradle --version
-install:
-  - npm install
-  - npm install -g ionic cordova
-
 jobs:
   include:
-    - stage: "Tests"
+    - stage: "Unit Tests"
+      language: node_js
+      node_js: "12.14.0"
+
+      env:
+        global:
+          - CC_TEST_REPORTER_ID=9e94eb42394f339fee6592314b209bd1afb92b11580fee8e550111aa42626990
+          - ANDROID_API_LEVEL=28
+          - ANDROID_BUILD_TOOLS_VERSION=28.0.3
+          - ANDROID_ABI=armeabi-v7a
+
+      dist: xenial
+      services:
+        - xvfb
+
+      addons:
+        chrome: stable
+
+      branches:
+            only:
+              - master
+
+      install:
+        - npm install
+        - npm install -g ionic cordova
+      before_script:
+        - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
+        - chmod +x ./cc-test-reporter
+        - ./cc-test-reporter before-build
       name: "Unit Tests"
       script: npm run test:onceAndCoverage
-    - script: npm run e2e
+      after_script:
+        - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
+    - stage: "E2E Tests"
+          language: node_js
+      node_js: "12.14.0"
+
+      env:
+        global:
+          - CC_TEST_REPORTER_ID=9e94eb42394f339fee6592314b209bd1afb92b11580fee8e550111aa42626990
+          - ANDROID_API_LEVEL=28
+          - ANDROID_BUILD_TOOLS_VERSION=28.0.3
+          - ANDROID_ABI=armeabi-v7a
+
+      dist: xenial
+      services:
+        - xvfb
+
+      addons:
+        chrome: stable
+
+      branches:
+            only:
+              - master
+
+      install:
+        - npm install
+        - npm install -g ionic cordova
+      before_script:
+        - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
+        - chmod +x ./cc-test-reporter
+        - ./cc-test-reporter before-build
+      script: npm run e2e
       name: "E2E Tests"
-    - script: ionic cordova build android --prod
+      after_script:
+        - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
+    - stage: "Build Android"
+      language: node_js
+      node_js: "12.14.0"
+
+      env:
+        global:
+          - ANDROID_API_LEVEL=28
+          - ANDROID_BUILD_TOOLS_VERSION=28.0.3
+          - ANDROID_ABI=armeabi-v7a
+      script: ionic cordova build android --prod
       before_script:
         - wget https://dl.google.com/android/repository/sdk-tools-linux-4333796.zip
         - unzip sdk-tools-linux-4333796.zip
@@ -96,6 +132,4 @@ jobs:
         - tar -xzvf /sdk-tools-linux-4333796.zip
         - echo "y" | ./android-sdk-linux/tools/android update sdk --no-ui --filter android-28,build-tools-28.0.3
         - export ANDROID_HOME=${PWD}/android-sdk-linux
-  
-after_script:
-  - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
+       
