--- a/.travis.yml
+++ b/.travis.yml
@@ -5,25 +5,17 @@ jobs:
     - stage: "Unit Tests"
       language: node_js
       node_js: "12.14.0"
-
       env:
         global:
           - CC_TEST_REPORTER_ID=9e94eb42394f339fee6592314b209bd1afb92b11580fee8e550111aa42626990
-          - ANDROID_API_LEVEL=28
-          - ANDROID_BUILD_TOOLS_VERSION=28.0.3
-          - ANDROID_ABI=armeabi-v7a
-
       dist: xenial
       services:
         - xvfb
-
       addons:
         chrome: stable
-
       branches:
             only:
               - master
-
       install:
         - npm install
         - npm install -g ionic cordova
@@ -36,27 +28,19 @@ jobs:
       after_script:
         - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
     - stage: "E2E Tests"
-          language: node_js
+      language: node_js
       node_js: "12.14.0"
-
       env:
         global:
           - CC_TEST_REPORTER_ID=9e94eb42394f339fee6592314b209bd1afb92b11580fee8e550111aa42626990
-          - ANDROID_API_LEVEL=28
-          - ANDROID_BUILD_TOOLS_VERSION=28.0.3
-          - ANDROID_ABI=armeabi-v7a
-
       dist: xenial
       services:
         - xvfb
-
       addons:
         chrome: stable
-
       branches:
             only:
               - master
-
       install:
         - npm install
         - npm install -g ionic cordova
@@ -69,9 +53,7 @@ jobs:
       after_script:
         - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
     - stage: "Build Android"
-      language: node_js
-      node_js: "12.14.0"
-
+      language: android
       env:
         global:
           - ANDROID_API_LEVEL=28
