--- a/.travis.yml
+++ b/.travis.yml
@@ -52,18 +52,13 @@ jobs:
       after_script:
         - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
     - stage: "Builds"
+      name: "Build Android"
       language: android
       env:
         global:
           - ANDROID_API_LEVEL=28
           - ANDROID_BUILD_TOOLS_VERSION=28.0.3
           - ANDROID_ABI=armeabi-v7a
-      script: ionic cordova build android --prod
-      before_script:
-        - npm install -g cordova-res
-        - ionic cordova resources android
-        - ionic cordova platform add android
-      name: "Build Android"
       jdk: oraclejdk8
       android:
         components:
@@ -79,6 +74,7 @@ jobs:
           - 'android-sdk-preview-license-.+'
           - 'android-sdk-license-.+'
           - 'google-gdk-license-.+'
+          
       before_cache:
         - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
         - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
@@ -87,6 +83,25 @@ jobs:
           - $HOME/.gradle/caches/
           - $HOME/.gradle/wrapper/
           - $HOME/.android/build-cache
+          
+      before_install:
+        - nvm install 12.14.0
+        - node --version
+        - npm --version
+        - gradle --version
+      
+      script: ionic cordova build android --prod
+      before_script:
+        - npm install -g cordova-res
+        - ionic cordova resources android
+        - ionic cordova platform add android
+
+      before_deploy:
+        # start install android
+        - wget https://dl.google.com/android/repository/sdk-tools-linux-4333796.zip
+        - tar -xzvf /sdk-tools-linux-4333796.zip
+        - echo "y" | ./android-sdk-linux/tools/android update sdk --no-ui --filter android-28,build-tools-28.0.3
+        - export ANDROID_HOME=${PWD}/android-sdk-linux
       deploy:
         provider: pages
         skip-cleanup: true
@@ -97,10 +112,4 @@ jobs:
         on:
           repo: BenJneB/StudUCLouvain_ionic-v4
           branch: master
-      before_deploy:
-        # start install android
-        - wget https://dl.google.com/android/repository/sdk-tools-linux-4333796.zip
-        - tar -xzvf /sdk-tools-linux-4333796.zip
-        - echo "y" | ./android-sdk-linux/tools/android update sdk --no-ui --filter android-28,build-tools-28.0.3
-        - export ANDROID_HOME=${PWD}/android-sdk-linux
        
