--- a/.travis.yml
+++ b/.travis.yml
@@ -69,12 +69,13 @@ jobs:
         - nvm install 12.14.0
       install:
         - npm install
-        - npm install -g ionic cordova
+        - npm install -g ionic cordova cordova-res
         - node --version
         - npm --version
         - gradle --version
         
       before_script:
+        - ionic cordova resources android
         - ionic cordova platform add android
         - ionic info
       script: ionic cordova build android --prod
@@ -87,11 +88,12 @@ jobs:
         - nvm install 12.14.0
       install:
         - npm install
-        - npm install -g ionic cordova
+        - npm install -g ionic cordova cordova-res
         - node --version
         - npm --version
         
       before_script:
+        - ionic cordova resources ios
         - ionic cordova platform add ios
         - ionic info
       script: ionic cordova build ios --prod
