--- a/.travis.yml
+++ b/.travis.yml
@@ -91,7 +91,7 @@ jobs:
        
     - stage: "Build iOS"
       os: osx
-      language: objective-c
+      language: swift
           
       before_install:
         - nvm install 12.14.0
