--- a/package.json
+++ b/package.json
@@ -25,21 +25,21 @@
     "@angular/platform-browser-dynamic": "^7.2.2",
     "@angular/router": "^7.2.2",
     "@asymmetrik/ngx-leaflet": "^6.0.1",
-    "@ionic-native/app-availability": "^5.16.0",
-    "@ionic-native/app-version": "^5.16.0",
-    "@ionic-native/calendar": "^5.16.0",
-    "@ionic-native/core": "^5.16.0",
-    "@ionic-native/device": "^5.16.0",
-    "@ionic-native/diagnostic": "^5.16.0",
-    "@ionic-native/geolocation": "^5.16.0",
-    "@ionic-native/in-app-browser": "^5.16.0",
-    "@ionic-native/market": "^5.16.0",
-    "@ionic-native/native-geocoder": "^5.16.0",
-    "@ionic-native/network": "^5.16.0",
-    "@ionic-native/secure-storage": "^5.16.0",
-    "@ionic-native/splash-screen": "^5.16.0",
-    "@ionic-native/toast": "^5.16.0",
-    "@ionic/angular": "^4.11.3",
+    "@ionic-native/app-availability": "^5.20.0",
+    "@ionic-native/app-version": "^5.20.0",
+    "@ionic-native/calendar": "^5.20.0",
+    "@ionic-native/core": "^5.20.0",
+    "@ionic-native/device": "^5.20.0",
+    "@ionic-native/diagnostic": "^5.20.0",
+    "@ionic-native/geolocation": "^5.20.0",
+    "@ionic-native/in-app-browser": "^5.20.0",
+    "@ionic-native/market": "^5.20.0",
+    "@ionic-native/native-geocoder": "^5.20.0",
+    "@ionic-native/network": "^5.20.0",
+    "@ionic-native/secure-storage": "^5.20.0",
+    "@ionic-native/splash-screen": "^5.20.0",
+    "@ionic-native/toast": "^5.20.0",
+    "@ionic/angular": "^4.11.10",
     "@ionic/storage": "^2.2.0",
     "@ngx-translate/core": "^11.0.1",
     "@ngx-translate/http-loader": "^4.0.0",
@@ -75,15 +75,15 @@
     "@ionic/v4-migration-tslint": "^1.7.1",
     "@types/jasmine": "^2.8.16",
     "@types/jasminewd2": "^2.0.8",
-    "@types/leaflet": "^1.5.5",
-    "@types/node": "^12.12.3",
+    "@types/leaflet": "^1.5.8",
+    "@types/node": "^12.12.26",
     "codelyzer": "^4.5.0",
-    "cordova-plugin-device": "^2.0.2",
+    "cordova-plugin-device": "^2.0.3",
     "cordova-plugin-ionic-keyboard": "^2.2.0",
     "cordova-plugin-ionic-webview": "^4.1.3",
-    "cordova-plugin-splashscreen": "^5.0.2",
+    "cordova-plugin-splashscreen": "^5.0.3",
     "cordova-plugin-statusbar": "^2.4.2",
-    "cordova-plugin-whitelist": "^1.3.3",
+    "cordova-plugin-whitelist": "^1.3.4",
     "jasmine-core": "^2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "^4.4.1",
@@ -93,9 +93,9 @@
     "karma-jasmine": "^1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
     "karma-spec-reporter": "0.0.32",
-    "protractor": "~5.4.0",
+    "protractor": "^5.4.3",
     "protractor-http-mock": "^0.10.0",
-    "ts-node": "^8.4.1",
+    "ts-node": "^8.6.2",
     "tslint": "^5.20.0",
     "typescript": "~3.2.4"
   },
